2002-11-17  Sebastien Pouliot  <spouliot@videotron.ca>

	* AllTests.cs: Added a common RSA keypair for tests and all RSA 
	suites for new tests.
	* RSACryptoServiceProviderTest.cs: Include tests for keygen,
	import/export and signature (no encryption yet).
	* RSAOAEPKeyExchangeDeformatterTest.cs: Compare results with 
	pre-generated vectors from Mono/Windows (cannot yet compare 
	with CryptoAPI/Windows as OAEP isn't available on my system).
	* RSAOAEPKeyExchangeFormatterTest.cs: Test that the Formatter output
	is compatible with the Deformatter.
	* RSAPKCS1KeyExchangeDeformatterTest.cs: Compare results with 
	pre-generated vectors from Mono/Windows and CryptoAPI/Windows.
	* RSAPKCS1KeyExchangeFormatterTest.cs: Test that the Formatter output
	is compatible with the Deformatter.
	* RSAPKCS1SignatureDeformatterTest.cs: Compare results with 
	pre-generated vectors from Mono/Windows and CryptoAPI/Windows.
	* RSAPKCS1SignatureFormatterTest.cs: Test that the Formatter output
	is compatible with the Deformatter.

2002-11-16  Sebastien Pouliot  <spouliot@videotron.ca>

	* AllTests.cs: Added suites for DSASignatureDeformatter, 
	DSASignatureFormatter.
	* CryptoConfigTest.cs: Tests new URLs. This test will fail
	if System.Security.dll isn't present (or not yet compiled).
	* DSACryptoServiceProviderTest.cs: New. Key generation (limited
	because it's too slow), Import/Export, Signature and Verification.
	* DSASignatureDeformatterTest.cs: New. Test signature verification. 
	* DSASignatureFormatterTest.cs: New. Test signature creation.
	* DSATest.cs: Comment DSA-derived test class as DSA constructor
	is internal. Reworked the test suite.
	* SignatureDescriptionTest.cs: Added tests for
	DSASignatureDescription and RSAPKCS1SHA1SignatureDescription.

2002-11-02  Sebastien Pouliot  <spouliot@videotron.ca>

	* AllTests.cs: Added suites for SignatureDescription and 
	activated suites for SHA384Managed and SHA512Managed.
	* SignatureDescriptionTest.cs: New. Basic tests (because I don't